--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
 
-    "password": "password",
+    "password": "pass24",
     "database": "playlists_db",
 
     "host": "localhost",
