--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,8 @@
 {
   "development": {
     "username": "root",
-
-    "password": "password",
+    "password": "pass24",
     "database": "playlists_db",
-
     "host": "localhost",
     "dialect": "mysql"
   },
