bk-- added cookiesAuth/auth.js. In this file, routing for accepting user signup/login/signout. after logging in, a cookie stores session data, which is accessed later for attaching the user's db specific ID to the songs they add! I added textareas to the index.handlebars just to test login/database entry -> can be removed.

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "pass24",
-    "database": "playlists_db",
+    "database": "usersdb",
     "host": "localhost",
     "dialect": "mysql"
   },
