--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6",
     "spotify-web-api-node": "^4.0.0"
